# library

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: black-code-style.yaml  coverage.yaml  run_tests.yaml  tests.yaml
testing/: test_ads.py  test_database.py  test_interface.py  test_library.py  test_utils.py  test_work.py  testing.db  testing_outdated.db  testing_update.db
